# Proga

./: .gitignore  CMakeLists.txt  README.md  commandprocessor.cpp  commandprocessor.h  conditionparser.cpp  conditionparser.h  firstwindow.cpp  firstwindow.h  helpwindow.cpp  helpwindow.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  meterreading.cpp  meterreading.h  meterreadingmodel.cpp  meterreadingmodel.h  test_commandprocessor.cpp  test_conditionparser.cpp  test_meterreadingmodel.cpp  test_ui.cpp
lab2Z/: firstwindow.cpp  helpwindow.cpp  meterreading.cpp  meterreadingmodel.cpp  meterreadingmodel.h
